[package]
name = "cnokhwa"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.nokhwa]
version = "0.10.7"
features = ["input-native", "output-threaded"]
git = "https://github.com/eduramiba/nokhwa"
branch = "0.10"

[dependencies]
dcv-color-primitives = "0.7.0"
parking_lot = "0.12.3"

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
