[package]
name = "cnokhwa"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.nokhwa]
version = "0.10.10"
features = ["input-native", "output-threaded"]

[dependencies]
dcv-color-primitives = "0.7.0"
parking_lot = "0.12.5"

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
